# idle

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  Readme.md
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: build_and_install.yml
cmake/: CMakeLists.txt  Findidle.cmake  config.in.cmake  configure_bases.cmake  configure_compiler.cmake  configure_macros.cmake
cmake/base/: dep-base.cmake  lib-base.cmake  project-base.cmake
cmake/compiler/: clang.cmake  msvc.cmake
cmake/macros/: configure_pch.cmake  version.cmake
dep/: FindBoost.cmake  FindCatch2.cmake  FindDemangle.cmake  FindLIEF.cmake  FindSQLite3.cmake  Findconcurrentqueue.cmake  Findcontinuable.cmake  Findcpp17_headers.cmake  Findefsw.cmake  Findfmt.cmake  Findfrozen.cmake  Findfunction2.cmake  Findhat-trie.cmake  Findjson.cmake  Findmbedtls.cmake  Findmpark_variant.cmake  Findreplxx.cmake  Findspdlog.cmake  Findtoml11.cmake  Findutfcpp.cmake
dep/boost/: CMakeLists.txt  error_code.cpp
dep/catch/: CMakeLists.txt  catch.cpp
dep/demangle/: CMakeLists.txt
dep/demangle/demangle/include/llvm/Demangle/: MicrosoftDemangleNodes.h
dep/efsw/: CMakeLists.txt
dep/lief/: CMakeLists.txt
dep/lief/dep/rang/include/: rang.hpp
dep/lief/include/: compiler_support.h  json.hpp
dep/mbedtls/: CMakeLists.txt
dep/replxx/: CMakeLists.txt
dep/sqlite/: CMakeLists.txt
doc/: Doxyfile  license.cmake  license.cpp
docker/: Dockerfile  build.sh  make-clang-12.sh  make-gcc-10.sh  make-gcc-9.sh  make.sh  shell.sh
examples/: CMakeLists.txt  Readme.md
examples/ex_01_01_lifecycle/: lifecycle.cpp
examples/ex_01_02_components/: components.cpp
examples/ex_01_03_interfaces/: interfaces.cpp
examples/ex_01_04_encapsulation/: encapsulation.cpp
examples/ex_02_01_logging/: logging.cpp
examples/ex_02_02_gameloop/: gameloop.cpp
lib/: CMakeLists.txt
lib/idle/: CMakeLists.txt  pch.cpp  pch.hpp
lib/idle-locality-executable/: CMakeLists.txt  locality_executable.cpp
lib/idle-locality-plugin/: CMakeLists.txt  locality_plugin.cpp
lib/idle/core/: context.cpp  exception.cpp  graph.cpp  guid.cpp  iterators.cpp  locality.cpp  registry.cpp  service.cpp  stacktrace.cpp  version.cpp  version_impl.cpp.cmake.in
lib/idle/core/dep/: continuable.cpp  function.cpp
lib/idle/core/detail/: declare_impl.cpp  declare_impl.hpp  exception_base.hpp  exception_handling.hpp  formatter.hpp  hash.hpp  log.cpp  log.hpp  open_file.cpp  open_file.hpp  rtti.hpp  service_deleter.cpp  service_impl.cpp  service_impl.hpp  state.cpp  streams.cpp  streams.hpp  when_completed.hpp
lib/idle/core/detail/context/: context_impl.cpp  context_impl.hpp  event_loop_executor_impl.cpp  event_loop_executor_impl.hpp  garbage_collector.cpp  garbage_collector.hpp  registry_impl.cpp  registry_impl.hpp  scheduler.cpp  scheduler.hpp
lib/idle/core/detail/graph/: dfs.hpp
lib/idle/core/parts/: collection.cpp  container.cpp  dependency.cpp  dependency_types.cpp  dyn_dependencies.cpp  dyn_dependency.cpp  pollable_executor.cpp  poolable_executor.cpp  singleton.cpp  thread.cpp
lib/idle/core/util/: panic.cpp  source_location.cpp  string_view.cpp  terminal.cpp  thread_name.cpp  type_name.cpp
lib/idle/extra/: color.cpp  color_graph.cpp  graph_print.cpp  graphviz.cpp  module.cmake
lib/idle/interface/: activity.cpp  arguments.cpp  autostarted.cpp  command.cpp  command_processor.cpp  io_context.cpp  logger.cpp  module.cmake  program_arguments.cpp
lib/idle/plugin/: module.cmake  plugin.cpp  plugin_compiler.cpp  plugin_hotswap.cpp  plugin_loader.cpp  plugin_recompiler.cpp
lib/idle/plugin/detail/: demangle.cpp  demangle.hpp  directories.hpp  plugin_info.cpp  plugin_info.hpp  shared_library.cpp  shared_library.hpp
lib/idle/plugin/detail/plugin/: plugin_impl.cpp  plugin_impl.hpp
lib/idle/plugin/detail/plugin_compiler/: plugin_compiler_impl.cpp  plugin_compiler_impl.hpp
lib/idle/plugin/detail/plugin_hotswap/: plugin_hotswap_impl.cpp  plugin_hotswap_impl.hpp
lib/idle/plugin/detail/plugin_loader/: plugin_loader_impl.cpp  plugin_loader_impl.hpp
lib/idle/plugin/detail/plugin_recompiler/: plugin_recompiler_impl.cpp  plugin_recompiler_impl.hpp
lib/idle/service/: autostarter.cpp  command_line.cpp  commands.cpp  file_watcher.cpp  module.cmake  process_group.cpp  properties.cpp  signal_set.cpp  sink.cpp  status_notifier.cpp  store.cpp  strand.cpp  timer.cpp  var.cpp  visualizer.cpp
lib/idle/service/art/: equals.cpp  reflection.cpp  reflection_tree.cpp
lib/idle/service/detail/: asio_promise.hpp  configuration.hpp  default_paths.hpp  executors.hpp  promises_asio.hpp  promises_beast.hpp  promises_mapping.hpp
lib/idle/service/detail/autostarter/: autostarter_impl.cpp  autostarter_impl.hpp
lib/idle/service/detail/command_line/: command_line_impl.cpp  command_line_impl.hpp
lib/idle/service/detail/file_watcher/: file_watcher_impl.cpp  file_watcher_impl.hpp
lib/idle/service/detail/presets/: application_impl.cpp  application_impl.hpp
lib/idle/service/detail/process_group/: async_process.cpp  async_process.hpp  process_group_impl.cpp  process_group_impl.hpp
lib/idle/service/detail/signal_set/: signal_set_impl.cpp  signal_set_impl.hpp
lib/idle/service/detail/timer/: timer_impl.cpp  timer_impl.hpp
lib/idle/service/detail/visualizer/: visualizer_impl.cpp  visualizer_impl.hpp
lib/idle/service/presets/: application.cpp
test/: CMakeLists.txt
test/idle/core/: enums.cpp  flat_set.cpp  text.cpp  utility.cpp
test/idle/system/: art.cpp
test/sql/: create.sql  query.sql
test/testing/include/testing/: env.hpp  testing.hpp
test/testing/include/testing/env/: env.hpp
test/testing/src/: main.cpp
tools/: CMakeLists.txt
tools/cli/: CMakeLists.txt  cli.rc  main.cpp
tools/cli-lite/: CMakeLists.txt  main.cpp
tools/cli/install/etc/: idle.toml
tools/cli/install/project/: CMakeLists.txt
tools/cli/install/project/src/: pch.cpp  pch.hpp
tools/cli/install/project/src/hello/: hello.cpp
tools/playground/: CMakeLists.txt  main.cpp
tools/polish/: CMakeLists.txt  main.cpp
(+216 files in other folders)
