#[[
#   _____    _ _        .      .    .
#  |_   _|  | | |  .       .           .
#    | |  __| | | ___         .    .        .
#    | | / _` | |/ _ \                .
#   _| || (_| | |  __/ github.com/Naios/idle
#  |_____\__,_|_|\___| AGPL v3 (Early Access)
#
# Copyright(c) 2018 - 2021 Denis Blank <denis.blank at outlook dot com>
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU Affero General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Affero General Public License for more details.
#
# You should have received a copy of the GNU Affero General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.
#]]

add_library(catch2 STATIC ${CMAKE_CURRENT_LIST_DIR}/catch.cpp)

target_include_directories(catch2 PUBLIC "${Catch2_DIR}/single_include")
target_compile_definitions(catch2 PRIVATE CATCH_CONFIG_RUNNER)
target_link_libraries(catch2 PRIVATE idle-dep-base)

add_library(Catch2::Catch2 ALIAS catch2)

set_target_properties(catch2 PROPERTIES FOLDER "dep")
